<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="de">
    <string name="welcome_header">Willkommen bei SimRa!</string>
    <string name="welcome_text">Vielen Dank, dass Sie das SimRa-Projekt unterstützen.</string>
    <string name="welcome_text2">Viel Spaß und Gute Fahrt!.</string>
    <string name="welcome_text3">Mit freundlichen Grüßen,\ndas SimRa-Team.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MCC TU Berlin</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="feedbackReceiver">ask@mcc.tu-berlin.de</string>
    <string name="demoDataHeader">SimRa User Data</string>
    <string name="feedbackHeader">SimRa Feedback</string>
    <string name="demoDataMail">Name: \nAlter: \nBeruf: \nFahrradtyp: Bsp. Rennrad\nDurchschnittlich wöchentlich zurückgelegte Kilometeranzahl mit dem Rad: </string>
    <string name="permissionFineLocation">Um fortzufahren, erlaube bitte den Zugriff auf Deine Standortdaten.</string>
    <string name="mccPage">https://www.mcc.tu-berlin.de/menue/aktuelles/?isMobile=1</string>
    <string name="simRaPage">https://www.mcc.tu-berlin.de/menue/forschung/projekte/simra/?isMobile=1</string>
    <string name="privacyLink">https://www.mcc.tu-berlin.de/menue/forschung/projekte/simra/datenschutzerklaerung/parameter/de/?isMobile=1</string>
    <string name="dsbContact">https://www.tu-berlin.de/allgemeine_seiten/e_mail_anfrage/parameter/mobil/id/141314/?no_cache=1&amp;ask_mail=XHzLwAANlp3Iq7tw1i0B%2F1ZZPCqSMY443IwjBNB1a4lD6OfrRJfJHXOx5r3yL9Ga&amp;ask_name=DATENSCHUTZBEAUFTRAGTE</string>
    <string name="startButtonText">Aufzeichnung \n starten</string>
    <string name="stopButtonText">Aufzeichnung \n stoppen</string>
    <string name="permissionRequestRationale">Diese App benötigt den Zugriff auf deine Standortdaten, um dich auf der Karte anzuzeigen und deine Fahrt zu speichern.</string>
    <string name="recorder_channel_name">Aufzeichnung</string>
    <string name="upload_channel_name">Hochladen</string>
    <string name="recorder_channel_description">Fahrt wird aufgezeichnet</string>
    <string name="upload_channel_description">Fahrten werden hochgeladen</string>
    <string name="osmCopyright">© <a href="https://www.openstreetmap.org/copyright/de">OpenStreetMap</a> Mitwirkende </string>
    <string name="title_activity_history">Meine Fahrten</string>
    <string name="selectedRideInfo">Die folgende Fahrt wurde ausgewählt: </string>
    <string name="errorNoRideSelected">Es wurde keine Fahrt ausgewählt!</string>
    <string name="errorRideTooShort">Die Fahrt muss mindestens\n30 Sekunden dauern!</string>
    <string name="locationSpinner">Ort des Handys während der Fahrt </string>
    <string name="description">Optionaler Kommentar</string>
    <string name="annotation_title">Was ist hier passiert?</string>
    <string name="incident_type">Art des Ereignisses</string>
    <string name="descriptionBody">Optionaler Kommentar</string>
    <string name="incidentType1">Nichts</string>
    <string name="locationType1">Hosentasche</string>
    <string name="doneEditingIncident">Fertig</string>
    <string name="cancel">Abbrechen</string>
    <string name="pleaseChoose">Bitte auswählen</string>
    <string name="bikeTypeSpinnerTitle">Fahrradtyp</string>
    <string name="locationTypeSpinnerTitle">Üblicher Ort des Geräts während der Fahrt:</string>
    <string name="title_activity_privacy">Datenschutz</string>
    <string name="textTUCopyRight">Der Herausgeber ist bestrebt, in allen Publikationen die Urheberrechte der verwendeten Bilder, Grafiken, Ton- und Videodokumente sowie Texte zu beachten, von ihm selbst erstellte Bilder, Grafiken, Ton- und Videodokumente sowie Texte zu nutzen oder auf lizenzfreie Grafiken, Ton- und Videodokumente sowie Texte zurückzugreifen. Alle innerhalb des Internetangebotes genannten und ggf. durch Dritte geschützten Marken- und Warenzeichen unterliegen uneingeschränkt den Bestimmungen des jeweils gültigen Kennzeichenrechts und den Besitzrechten der jeweiligen eingetragenen Eigentümer.
        Allein aufgrund der bloßen Nennung ist nicht der Schluss zu ziehen, dass Markenzeichen nicht durch Rechte Dritter geschützt sind! Das Copyright für veröffentlichte, vom Herausgeber selbst erstellte Inhalte und Objekte bleibt allein beim Herausgeber der Seiten. Eine Vervielfältigung, Verarbeitung, Einspeicherung oder Verwendung solcher Grafiken, Ton- und Videodokumente sowie Texte in anderen elektronischen oder gedruckten Publikationen ist ohne ausdrückliche Zustimmung des Autors nicht gestattet. Unberührt davon bleibt das Kopieren und Herunterladen für den privaten, wissenschaftlichen und nicht kommerziellen Gebrauch. Wir erlauben ausdrücklich und begrüßen das Zitieren unserer Dokumente und Webseiten sowie das Setzen von Links auf unsere Website.</string>
    <string name="urheber_und_kennzeichenrecht">Urheber- und Kennzeichenrecht</string>
    <string name="textLinks">Bei direkten oder indirekten Verweisen auf fremde Webseiten (\"Hyperlinks\"), die außerhalb des Verantwortungsbereiches des Herausgebers liegen, würde eine Haftungsverpflichtung ausschließlich in dem Fall in Kraft treten, in dem der Herausgeber von den Inhalten Kenntnis hat und es ihm technisch möglich und zumutbar wäre, die Nutzung im Falle rechtswidriger Inhalte zu verhindern. Der Herausgeber erklärt hiermit ausdrücklich, dass zum Zeitpunkt der Linksetzung keine illegalen Inhalte auf den zu verlinkenden Seiten erkennbar waren. Auf die aktuelle und zukünftige Gestaltung, die Inhalte oder die Urheberschaft der verlinkten/verknüpften Seiten hat der Herausgeber keinerlei Einfluss.
        Deshalb distanziert er sich hiermit ausdrücklich von allen Inhalten aller verlinkten /verknüpften Seiten, die nach der Linksetzung verändert wurden. Diese Feststellung gilt für alle innerhalb des eigenen Internetangebotes gesetzten Links und Verweise sowie für Fremdeinträge in vom Autor eingerichteten Gästebüchern, Diskussionsforen, Linkverzeichnissen, Mailinglisten und in allen anderen Formen von Datenbanken, auf deren Inhalt externe Schreibzugriffe möglich sind. Für illegale, fehlerhafte oder unvollständige Inhalte und insbesondere für Schäden, die aus der Nutzung oder Nichtnutzung solcherart dargebotener Informationen entstehen, haftet allein der Anbieter der Seite, auf welche verwiesen wurde, nicht derjenige, der über Links auf die jeweilige Veröffentlichung lediglich verweist.</string>
    <string name="verweise_und_links">Verweise und Links</string>
    <string name="textDisclaimer">Die Inhalte dieser Applikation werden mit größtmöglicher Sorgfalt recherchiert und implementiert. Fehler im Bearbeitungsvorgang sind dennoch nicht auszuschließen. Bei Hinweisen und Korrekturen wenden Sie sich bitte an die genannten Ansprechpartner. Der Herausgeber übernimmt keinerlei Gewähr für die Aktualität, Korrektheit, Vollständigkeit oder Qualität der bereitgestellten Informationen. Haftungsansprüche gegen den Herausgeber, welche sich auf Schäden materieller oder ideeller Art beziehen, die durch die Nutzung oder Nichtnutzung der dargebotenen Informationen bzw. durch die Nutzung fehlerhafter und unvollständiger Informationen verursacht wurden, sind grundsätzlich ausgeschlossen, sofern seitens des Herausgebers kein nachweislich vorsätzliches oder grob fahrlässiges Verschulden vorliegt. Alle Angebote sind freibleibend und unverbindlich. Der Herausgeber behält es sich ausdrücklich vor, Teile der Applikation oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen oder die Veröffentlichung zeitweise oder endgültig einzustellen.</string>
    <string name="headerDisclaimer">Haftungsausschluss</string>
    <string name="headerHerausgeber"><p>Prof. Dr.&#8211;Ing. David Bermbach\n
Einsteinufer 17 Sekr.EN17 \n
10587 Berlin \n
Telefon: +49 (0)30 314&#8211;0 \n
E-Mail: simra.mcc@gmail.com</p></string>
    <string name="herausgeber">Herausgeber</string>
    <string name="textCallCenterTUBerlin">
        Das Call Center der TU Berlin \n
        <p>Telefonvermittlung und Auskunftsdienst Telefon: +49 (0)30 314&#8211;0 (extern) oder &#8211;8 (intern) \n
        Sprechzeiten: Mo-Do 8&#8211;16 Uhr, Fr 8&#8211;15 Uhr \n
        Weitere Kontaktmöglichkeiten finden Sie unter https://www.tu-berlin.de/servicemenue/kontakt/.</p></string>
    <string name="ansprechpartner">Ansprechpartner</string>
    <string name="ust">USt-Id-Nr.: DE 811 231 089</string>
    <string name="https_www_berlin_de_rbmskzl" translatable="false">https://www.berlin.de/rbmskzl/</string>
    <string name="textRechtsaufsicht">Der Regierende Bürgermeister von Berlin - Senatskanzlei</string>
    <string name="rechtsaufsicht">Rechtsaufsicht</string>
    <string name="textSupplementAddresseTUBerlin">Die Technische Universität Berlin ist eine Körperschaft öffentlichen Rechts gemäß §§ 1 und 2 des Berliner Hochschulgesetzes (BerlHG) und zugleich eine staatliche Einrichtung. Sie wird durch den Präsidenten gesetzlich vertreten. Der Name \"Technische Universität Berlin\" wird nicht ins Englische übersetzt.</string>
    <string name="www_tu_berlin_de">www.tu-berlin.de</string>
    <string name="textAddresseTUBerlin">Technische Universität Berlin \n
        Der Präsident \n
        Prof. Dr. Christian Thomsen\n
        Straße des 17. Juni 135 \n
        10623 Berlin \n
        Telefon: +49 (0)30 314&#8211;0</string>
    <string name="headerAddresseTUBerlin">Zentrale Adresse der TU Berlin</string>
    <string name="impressum">Impressum</string>
    <string name="umsatzsteueridentifikationsnummer">Umsatzsteueridentifikationsnummer</string>
    <string name="title_activity_credits">Grafikreferenzen</string>
    <string name="privacyButton">Weitere Informationen zum Datenschutz</string>
    <string name="mailRequestTU"><a href="https://www.tu-berlin.de/allgemeine_seiten/e_mail_anfrage/parameter/de/id/15/?no_cache=1&amp;ask_mail=XHZJPwAMSDyndkyaq9VQvIECv9JeS5KNoXecmLrjpflqqQN2WHH85Q%3D%3D&amp;ask_name=PRESSESTELLE">E-Mail Anfrage</a></string>
    <string name="ride_settings_title">Fahrteinstellungen</string>
    <string name="childString">Auf dem Fahrrad wird ein Kind transportiert.</string>
    <string name="trailerString">Am Fahrrad ist ein Anhänger angebracht.</string>
    <string name="ride_settings_description">Unten finden Sie die Einstellungen, die für diese Fahrt verwendet werden. Sie können diese sowohl in diesem Fenster, als auch unter \"Einstellungen\" im Hauptmenü finden.</string>
    <string name="rememberMyChoice">Diese Einstellungen merken</string>
    <string name="textPrivacyImprint">Zum Thema Datenschutz und Umgang mit von Nutzern erhobenen Daten beachten Sie bitte die gesonderten Hinweise auf der Datenschutzseite (zur Datenschutzseite kommen sie durch den Button unten). \\nDie Nutzung der im Rahmen des Impressums oder vergleichbarer Angaben veröffentlichten Kontaktdaten wie Postanschriften, Telefon- und Faxnummern sowie E-M0ailadressen durch Dritte zur Übersendung von nicht ausdrücklich angeforderten Informationen ist nicht gestattet. Rechtliche Schritte gegen die Versender von so genannten Spam-Mails bei Verstößen gegen dieses Verbot sind ausdrücklich vorbehalten.</string>
    <string name="close_simra">SimRa beenden</string>
    <string name="new_app_version_text">Um fortzufahren, aktualisieren Sie bitte SimRa via Google Play Store oder laden Sie die .APK-Datei herunter.</string>
    <string name="open_google_play_store">Google Play Store öffnen</string>
    <string name="download_the_apk_file">APK-Datei runterladen</string>
    <string name="installed_version">installierte Version:</string>
    <string name="newest_version">neueste Version:</string>
    <string name="later">Später</string>
</resources>