<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <RelativeLayout
        android:id="@+id/new_app_version_text_LinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        >
        <TextView
            android:id="@+id/new_app_version_text_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_app_version_text"
            android:textSize="17sp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/new_app_version_text_TextView">
            <TextView
                android:id="@+id/installed_version_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/installed_version"/>
            <TextView
                android:id="@+id/newest_version_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newest_version"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_app_version_text_LinearLayout"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/google_play_store_button"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/open_google_play_store"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
        <Button
            android:id="@+id/apk_button"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/download_the_apk_file"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
        <Button
            android:id="@+id/close_simra_button"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/close_simra"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:visibility="gone"/>
        <Button
            android:id="@+id/later_button"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/later"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>