<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/rounded_white"
    android:fadingEdgeLength="80dp"
    android:requiresFadingEdge="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <!--Put form controls here-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/ActivityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annotation_title"
            android:textSize="11pt"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/DropDown1Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incident_type"
            android:textSize="10pt" />

        <Spinner
            android:id="@+id/incidentTypeSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/incidenttypelist"
            android:prompt="@string/incidentType1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/DropDown2Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationSpinner"
            android:textSize="10pt" />

        <Spinner
            android:id="@+id/locationSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/locations"
            android:prompt="@string/locationType1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/DescriptionTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/EditTextDescriptionBody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descriptionBody"
            android:inputType="textMultiLine"
            android:lines="5" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <!--
        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/light_grey"
            android:backgroundTint="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:drawableEnd="@drawable/save_icon"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:text="@string/doneEditingIncident"
            tools:text="@string/doneEditingIncident" />
            -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/back_button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:weightSum="7">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:fontFamily="@font/assistant_extralight"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:background="@drawable/cancel_icon_640" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:weightSum="7">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:fontFamily="@font/assistant_extralight"
                    android:gravity="center"
                    android:text="@string/doneEditingIncident"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:background="@drawable/ok_icon_640" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>